Add simple ui, add some unit tests to cover basic feature work. Update README

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "test:unit": "echo 'TODO'",
-    "test:component": "jest",
+    "test:unit": "jest",
     "test": "jest --watchAll"
   },
   "dependencies": {
