--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
+    "ts": "tsc",
     "test:unit": "jest",
     "test": "jest --watchAll"
   },
